fix issue with the space background getting stretched

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -48,7 +48,7 @@ body .v-application {
 }
 
 .space-parallax-bg {
-  background-size: 100% 100%;
+  background-size: cover;
   background-attachment: fixed;
   background-image: linear-gradient(
       rgba(21, 61, 165, 0.17),
